--- a/css/home.css
+++ b/css/home.css
@@ -917,3 +917,95 @@ aside{
 .postpoint{
 	position:relative;
 }
+
+.cityBox{
+	width:440px;
+	height:298px;
+	background-color: #fff;
+	box-shadow: 4px 0px 12px rgba(1, 1, 1, 0.4);
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	margin-left: -220px;
+	margin-top: -149px;
+}
+
+.boxTitle{
+	padding: 0 20px;
+	height: 50px;
+	color: #333;
+	position: relative;
+	font-size: 14px;
+	background-color: #fafafa;
+	border-bottom: solid 1px #ededed;
+}
+
+.boxTitle h3{
+	margin: 0;
+	padding: 0;
+	font-size: 18px;
+	line-height: 50px;
+	font-weight: normal;
+}
+
+.boxTitle a{
+	position: absolute;
+	right: 20px;
+	top: 17px;
+	width: 16px;
+	height: 16px;
+	color: #7f7f7f;
+	text-decoration: none;
+	background:url("../img/closebtn.png") no-repeat center;
+}
+
+.boxchange{
+	padding: 30px;
+}
+
+.boxchange div a{
+	text-decoration: none;
+	display: inline-block;
+	text-align: center;
+	width: 118px;
+	height: 38px;
+	line-height: 38px;
+	border: solid 1px #d0d0d0;
+	background-color: #fafafa;
+	cursor: pointer;
+	font-size: 14px;
+	border-radius: 2px;
+	color: #333;
+}
+
+.entercity{
+	margin-top: 20px;
+	font-size:14px;
+}
+
+.boxchange ul{
+	margin-top: 5px;
+	list-style: none;
+	overflow: hidden;
+}
+
+.boxchange ul li{
+	float: left;
+	text-align: center;
+	width: 118px;
+	margin-right: 6px;
+	margin-top: 10px;
+	height: 38px;
+	line-height: 38px;
+	border: solid 1px #d0d0d0;
+	background-color: #fafafa;
+	cursor: pointer;
+	font-size: 14px;
+	color: #333;
+	border-radius: 2px;
+}
+
+.boxchange ul li:hover{
+	border-color: #ff8600;
+	color: #333;
+}
